Regression: Crashes on opening blend file with legacy particle system #126286

Closed
opened 2024-08-13 16:17:47 +02:00 by Bruno · 2 comments

System Information
Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M2 Pro 1.2

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-12 22:42, hash: ddc9f92777cd
Worked: unknown but crashes also with 4.2.0 and 4.1.0 (!! the blend file contains Geonodes using the new GPencil to curve node)

Short description of error
Blender crashes (seg fault) right on opening file created with 4.3

Exact steps for others to reproduce the error

  1. Open 4.3
  2. create new default particle system on cube
  3. play animation for a few frames (space bar)
  4. stop animation
  5. save file
  6. quit Blender
  7. reopen saved file (attached as reference)

See also attached crash logs.

Here is the crashed thread:

Thread 0 Crashed::  Dispatch queue: com.apple.main-thread
0   Blender                       	       0x10463a234 ptcache_read(PTCacheID*, int) + 424
1   Blender                       	       0x104639fd4 BKE_ptcache_read + 976
2   Blender                       	       0x10460f2b4 system_step(ParticleSimulationData*, float, bool) + 996
3   Blender                       	       0x10460dd38 particle_system_update + 2084
4   Blender                       	       0x104ee0824 deform_verts(ModifierData*, ModifierEvalContext const*, Mesh*, blender::MutableSpan<blender::VecBase<float, 3>>) + 468
5   Blender                       	       0x104587678 BKE_modifier_deform_verts(ModifierData*, ModifierEvalContext const*, Mesh*, blender::MutableSpan<blender::VecBase<float, 3>>) + 40
6   Blender                       	       0x10452b0ec blender::bke::mesh_calc_modifiers(Depsgraph&, Scene const&, Object&, bool, bool, CustomData_MeshMasks const&, bool, bool, Mesh**, Mesh**, blender::bke::GeometrySet**) + 624
7   Blender                       	       0x104529d28 blender::bke::mesh_build_data(Depsgraph&, Scene const&, Object&, CustomData_MeshMasks const&, bool) + 84
8   Blender                       	       0x1045292c0 blender::bke::mesh_data_update(Depsgraph&, Scene const&, Object&, CustomData_MeshMasks const&) + 168
9   Blender                       	       0x1045e9b24 BKE_object_handle_data_update(Depsgraph*, Scene*, Object*) + 372
10  Blender                       	       0x1045e9eac BKE_object_eval_uber_data(Depsgraph*, Scene*, Object*) + 64
11  Blender                       	       0x104b87824 blender::deg::(anonymous namespace)::evaluate_node(blender::deg::(anonymous namespace)::DepsgraphEvalState const*, blender::deg::OperationNode*) + 124
12  Blender                       	       0x104b87738 blender::deg::(anonymous namespace)::deg_task_run_func(TaskPool*, void*) + 44
13  Blender                       	       0x104b57a0c tbb::internal::function_task<Task>::execute() + 24
14  libtbb.dylib                  	       0x10f7949a4 tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) + 428
15  libtbb.dylib                  	       0x10f79403c tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) + 196
16  Blender                       	       0x104b57bd4 tbb::internal::task_group_base::wait() + 40
17  Blender                       	       0x104b57b98 BLI_task_pool_work_and_wait + 384
18  Blender                       	       0x104b87554 blender::deg::(anonymous namespace)::evaluate_graph_threaded_stage(blender::deg::(anonymous namespace)::DepsgraphEvalState*, TaskPool*, blender::deg::(anonymous namespace)::EvaluationStage) + 340
19  Blender                       	       0x104b872dc blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph*) + 316
20  Blender                       	       0x104b97d44 deg_flush_updates_and_refresh(blender::deg::Depsgraph*, DepsgraphEvaluateSyncWriteback) + 64
21  Blender                       	       0x10464d690 scene_graph_update_tagged(Depsgraph*, Main*, bool) + 372
22  Blender                       	       0x104bb03a4 wm_event_do_depsgraph(bContext*, bool) + 176
23  Blender                       	       0x104bbb594 wm_file_read_post(bContext*, char const*, wmFileReadPost_Params const*) + 456
24  Blender                       	       0x104bba970 WM_file_read(bContext*, char const*, ReportList*) + 652
25  Blender                       	       0x104bbeac4 wm_open_mainfile__open(bContext*, wmOperator*) + 340
26  Blender                       	       0x104bb1964 wm_operator_invoke(bContext*, wmOperatorType*, wmEvent const*, PointerRNA*, ReportList*, bool, bool) + 552
27  Blender                       	       0x104be6b60 ghost_event_proc(GHOST_EventHandle__*, void*) + 1384
28  Blender                       	       0x106158408 GHOST_EventManager::dispatchEvent() + 244
29  Blender                       	       0x106158a78 GHOST_EventManager::dispatchEvents() + 32
30  Blender                       	       0x10615ac94 GHOST_System::dispatchEvents() + 40
31  Blender                       	       0x104be6258 wm_window_events_process(bContext const*) + 60
32  Blender                       	       0x104ba9b40 WM_main(bContext*) + 28
33  Blender                       	       0x10429ae10 main + 880
34  dyld                          	       0x19fec7154 start + 2476
**System Information** Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M2 Pro 1.2 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-12 22:42, hash: `ddc9f92777cd` Worked: unknown but crashes also with 4.2.0 and 4.1.0 (!! the blend file contains Geonodes using the new GPencil to curve node) **Short description of error** Blender crashes (seg fault) right on opening file created with 4.3 **Exact steps for others to reproduce the error** 1. Open 4.3 2. create new default particle system on cube 3. play animation for a few frames (space bar) 4. stop animation 5. save file 6. quit Blender 7. reopen saved file (attached as reference) See also attached crash logs. Here is the crashed thread: ~~~ Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 Blender 0x10463a234 ptcache_read(PTCacheID*, int) + 424 1 Blender 0x104639fd4 BKE_ptcache_read + 976 2 Blender 0x10460f2b4 system_step(ParticleSimulationData*, float, bool) + 996 3 Blender 0x10460dd38 particle_system_update + 2084 4 Blender 0x104ee0824 deform_verts(ModifierData*, ModifierEvalContext const*, Mesh*, blender::MutableSpan<blender::VecBase<float, 3>>) + 468 5 Blender 0x104587678 BKE_modifier_deform_verts(ModifierData*, ModifierEvalContext const*, Mesh*, blender::MutableSpan<blender::VecBase<float, 3>>) + 40 6 Blender 0x10452b0ec blender::bke::mesh_calc_modifiers(Depsgraph&, Scene const&, Object&, bool, bool, CustomData_MeshMasks const&, bool, bool, Mesh**, Mesh**, blender::bke::GeometrySet**) + 624 7 Blender 0x104529d28 blender::bke::mesh_build_data(Depsgraph&, Scene const&, Object&, CustomData_MeshMasks const&, bool) + 84 8 Blender 0x1045292c0 blender::bke::mesh_data_update(Depsgraph&, Scene const&, Object&, CustomData_MeshMasks const&) + 168 9 Blender 0x1045e9b24 BKE_object_handle_data_update(Depsgraph*, Scene*, Object*) + 372 10 Blender 0x1045e9eac BKE_object_eval_uber_data(Depsgraph*, Scene*, Object*) + 64 11 Blender 0x104b87824 blender::deg::(anonymous namespace)::evaluate_node(blender::deg::(anonymous namespace)::DepsgraphEvalState const*, blender::deg::OperationNode*) + 124 12 Blender 0x104b87738 blender::deg::(anonymous namespace)::deg_task_run_func(TaskPool*, void*) + 44 13 Blender 0x104b57a0c tbb::internal::function_task<Task>::execute() + 24 14 libtbb.dylib 0x10f7949a4 tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) + 428 15 libtbb.dylib 0x10f79403c tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) + 196 16 Blender 0x104b57bd4 tbb::internal::task_group_base::wait() + 40 17 Blender 0x104b57b98 BLI_task_pool_work_and_wait + 384 18 Blender 0x104b87554 blender::deg::(anonymous namespace)::evaluate_graph_threaded_stage(blender::deg::(anonymous namespace)::DepsgraphEvalState*, TaskPool*, blender::deg::(anonymous namespace)::EvaluationStage) + 340 19 Blender 0x104b872dc blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph*) + 316 20 Blender 0x104b97d44 deg_flush_updates_and_refresh(blender::deg::Depsgraph*, DepsgraphEvaluateSyncWriteback) + 64 21 Blender 0x10464d690 scene_graph_update_tagged(Depsgraph*, Main*, bool) + 372 22 Blender 0x104bb03a4 wm_event_do_depsgraph(bContext*, bool) + 176 23 Blender 0x104bbb594 wm_file_read_post(bContext*, char const*, wmFileReadPost_Params const*) + 456 24 Blender 0x104bba970 WM_file_read(bContext*, char const*, ReportList*) + 652 25 Blender 0x104bbeac4 wm_open_mainfile__open(bContext*, wmOperator*) + 340 26 Blender 0x104bb1964 wm_operator_invoke(bContext*, wmOperatorType*, wmEvent const*, PointerRNA*, ReportList*, bool, bool) + 552 27 Blender 0x104be6b60 ghost_event_proc(GHOST_EventHandle__*, void*) + 1384 28 Blender 0x106158408 GHOST_EventManager::dispatchEvent() + 244 29 Blender 0x106158a78 GHOST_EventManager::dispatchEvents() + 32 30 Blender 0x10615ac94 GHOST_System::dispatchEvents() + 40 31 Blender 0x104be6258 wm_window_events_process(bContext const*) + 60 32 Blender 0x104ba9b40 WM_main(bContext*) + 28 33 Blender 0x10429ae10 main + 880 34 dyld 0x19fec7154 start + 2476 ~~~
Bruno added the
Type
Report
Status
Needs Triage
Severity
Normal
labels 2024-08-13 16:17:48 +02:00
Iliya Katushenock added
Module
Nodes & Physics
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-08-13 16:43:45 +02:00

Crash in legacy particles system.

Crash in legacy particles system.
Iliya Katushenock added
Severity
High
Interest
Modeling
and removed
Severity
Normal
labels 2024-08-13 16:44:30 +02:00
Bruno changed title from Blender 4.3 crashes on opening blend file with particle system to Blender 4.3 crashes on opening blend file with legacy particle system 2024-08-13 18:09:42 +02:00
Member

Caused by fc5d21c888.

Caused by fc5d21c8884c64c46ff9b897109d46df8b1d5585.
Iliya Katushenock changed title from Blender 4.3 crashes on opening blend file with legacy particle system to Regression: Crashes on opening blend file with legacy particle system 2024-08-13 19:49:22 +02:00
Iliya Katushenock added this to the 4.2 LTS milestone 2024-08-13 19:49:28 +02:00
Iliya Katushenock removed this from the 4.2 LTS milestone 2024-08-13 19:49:41 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-13 19:54:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#126286
No description provided.