Fix #126286: crash when opening blend file with point cache